# accessthedata-ckan

./: .dev.env  .env  .env.example  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  ecs-params.yaml  package-lock.json  pinned.nix  requirements.txt  shell.nix  start_ckan.sh  test.ini
access-the-data/: .gitignore  package.json  tailwind.config.js
access-the-data/.next/: react-loadable-manifest.json
access-the-data/.next/server/: locales_en_common_json.js  (+2 more)
access-the-data/pages/: index.tsx
ckan/: Dockerfile  Dockerfile.dev
ckan-base/2.9/: Dockerfile
ckan-base/master/: Dockerfile
ckan/docker-entrypoint.d/: build-css.sh  enable-cors.sh
ckanext/lacounts/: commands.py  helpers.py  plugin.py  tagging.py  validators.py
datapusher/: Dockerfile
entrypoint.d/: envs.sh
scripts/: check_harvested_datasets.py
src/: README.md
src/ckanext-hack4laatd/: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
src/ckanext-hack4laatd/.github/workflows/: test.yml
src/ckanext-hack4laatd/ckanext/hack4laatd/: plugin.py
src/ckanext-hack4laatd/ckanext/hack4laatd/assets/: postcss.config.js  script.js  style.css  webassets.yml
src/ckanext-hack4laatd/ckanext/hack4laatd/assets/src/css/: fonts.css  footer.css  header.css  home.css  layout.css  navs.css  reset.css  search-bar.css  type.css  vars.css
src/ckanext-hack4laatd/ckanext/hack4laatd/i18n/: .gitignore
src/ckanext-hack4laatd/ckanext/hack4laatd/templates/: base.html  footer.html  header.html
src/ckanext-hack4laatd/ckanext/hack4laatd/templates/home/: about.html  index.html
src/ckanext-hack4laatd/ckanext/hack4laatd/templates/home/snippets/: about_text.html
src/ckanext-hack4laatd/ckanext/hack4laatd/tests/: test_plugin.py
src/ckanext-hack4laatd/ckanext_hack4laatd.egg-info/: SOURCES.txt
src/ckanext-newtest/: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
(+30 files in other folders)
