[metadata]
name = ckanext-hack4laatd
version = 0.0.1
description = A test extension to compare against other extensions that may be buggy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hackforla/ckanext-hack4laatd
author = Tony Delgado-Willis
author_email = tony.delgado.willis@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             hack4laatd = ckanext.hack4laatd.plugin:hack4laatdPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/hack4laatd/i18n/ckanext-hack4laatd.pot
width = 80

[init_catalog]
domain = ckanext-hack4laatd
input_file = ckanext/hack4laatd/i18n/ckanext-hack4laatd.pot
output_dir = ckanext/hack4laatd/i18n

[update_catalog]
domain = ckanext-hack4laatd
input_file = ckanext/hack4laatd/i18n/ckanext-hack4laatd.pot
output_dir = ckanext/hack4laatd/i18n
previous = true

[compile_catalog]
domain = ckanext-hack4laatd
directory = ckanext/hack4laatd/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
